# browson

./: .gitignore  LICENSE  README.md  browson.py  node.py  nodeview.py  noxfile.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  shell.nix  style.py  test_browson.py  test_node.py  test_style.py  test_utils.py  utils.py
browson/: __init__.py  __main__.py  lineinput.py  nodeview.py  style.py  utils.py
tests/: test_browson.py  test_node.py  test_style.py  test_utils.py
